Finished reactive endpoints to micronaut